tests/expected_invalid_cross_module_proves.diag.out
<input>:8:60: error: functions may only declare 'proves' for proofs from the same module
    public fn make_receipt() -> authority::FrameReceipt proves authority::FrameReceipt {
                                                               ^^^^^^^^^^^^^^^^^^^^^^^
